--- a/front/index.html
+++ b/front/index.html
@@ -28,6 +28,7 @@
         event.preventDefault();
         const playerTag = document.getElementById("playerTag").value;
         const apiToken = document.getElementById("apiToken").value;
+        console.log(playerTag, apiToken);
     })
 
 </script>
